docs: cleanup outdated docs and add Gitee CI workflows
- chore: remove naming-convention-audit-report.md (outdated)
- chore: remove sort-filter-merge design and plan docs (completed)
- docs: update AGENTS.md and CLAUDE.md with new module structure
- docs: update architecture docs (tech stack, module structure, deployment)
- ci: add Gitee workflows for Maven test and deployment